@@ -14,10 +14,10 @@ import javax.ws.rs.ProcessingException;
 import org.eclipse.microprofile.faulttolerance.exceptions.TimeoutException;
 import org.eclipse.microprofile.rest.client.inject.RestClient;
 
-import net.atos.client.kvk.basisprofiel.model.Vestiging;
-import net.atos.client.kvk.exception.VestigingNotFoundException;
+import net.atos.client.kvk.exception.KvKClientNoResultException;
 import net.atos.client.kvk.model.KVKZoekenParameters;
 import net.atos.client.kvk.zoeken.model.Resultaat;
+import net.atos.client.kvk.zoeken.model.ResultaatItem;
 
 @ApplicationScoped
 public class KVKClientService {
@@ -33,15 +33,27 @@ public class KVKClientService {
     private BasisprofielClient basisprofielClient;
 
     public Resultaat zoeken(final KVKZoekenParameters parameters) {
-        return zoekenClient.getResults(parameters);
+        try {
+            return zoekenClient.getResults(parameters);
+        } catch (final KvKClientNoResultException e) {
+            return new Resultaat().aantal(0);
+        } catch (final TimeoutException | ProcessingException e) {
+            LOG.severe(() -> String.format("Error while calling KVKClient provider: %s", e.getMessage()));
+        }
+        return null;
     }
 
-    public Vestiging findHoofdvestiging(final String kvkNummer) {
-        try {
-            return basisprofielClient.getHoofdvestiging(kvkNummer, false);
-        } catch (final VestigingNotFoundException e) {
-        } catch (final TimeoutException | ProcessingException e) {
-            LOG.severe(() -> String.format("Error while calling KVK Basisprofiel provider: %s", e.getMessage()));
+    public ResultaatItem findHoofdvestiging(final String kvkNummer) {
+        final KVKZoekenParameters zoekParameters = new KVKZoekenParameters();
+        zoekParameters.setType("hoofdvestiging");
+        zoekParameters.setKvkNummer(kvkNummer);
+        final Resultaat resultaat = zoeken(zoekParameters);
+        if (resultaat != null) {
+            return switch (resultaat.getAantal()) {
+                case 0 -> null;
+                case 1 -> resultaat.getResultaten().get(0);
+                default -> throw new IllegalStateException("%s: %d".formatted("Too many results", resultaat.getAantal()));
+            };
         }
         return null;
     }
